--- a/port/index.html
+++ b/port/index.html
@@ -13,7 +13,7 @@
             
             <div class="bg-red-400 p-2 rounded">
                 <img src="https://ys-portfolio-ten.vercel.app/img/books.png" class="rounded" alt="">
-                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/portfolio/books">YSBookList</a>
+                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/portfolio/books">BookList</a>
             </div>
 
             <div class="bg-red-400 p-2 rounded">
@@ -33,7 +33,7 @@
 
             <div class="bg-red-400 p-2 rounded">
                 <img src="img/youtube.png" class="rounded" alt="">
-                <a class="text-white text-xl hover:underline" href="https://yousuf-tube.vercel.app/">YouTube Clone</a>
+                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/portfolio/Yout">YouTube</a>
             </div>
 
         </div>
