--- a/port/index.html
+++ b/port/index.html
@@ -1,42 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-green-500">
-    <div class="container mx-auto my-5 ">
-        <h1 class="text-white text-5xl p-5 text-center font-bold ">Portfolio</h1>
-        <div class="grid grid-cols-2 gap-5 md:grid-cols-3">
-            
-            <div class="bg-red-400 p-2 rounded">
-                <img src="https://ys-portfolio-ten.vercel.app/img/books.png" class="rounded" alt="">
-                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/portfolio/books">BookList</a>
-            </div>
-
-            <div class="bg-red-400 p-2 rounded">
-                <img src="https://ys-portfolio-ten.vercel.app/img/ismoil.png" class="rounded" alt="">
-                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/bibliotek/bibliotek">ismoil.me</a>
-            </div>
-
-            <div class="bg-red-400 p-2 rounded">
-                <img src="https://ys-portfolio-ten.vercel.app/img/master.png" class="rounded" alt="">
-                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/portfolio/ismoil">ismoil</a>
-            </div>
-
-            <div class="bg-red-400 p-2 rounded">
-                <img src="https://ys-portfolio-ten.vercel.app/img/lesson3.png" class="rounded" alt="">
-                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/portfolio/lesson3">Lesson-3</a>
-            </div>
-
-            <div class="bg-red-400 p-2 rounded">
-                <img src="img/youtube.png" class="rounded" alt="">
-                <a class="text-white text-xl hover:underline" href="https://uvays-2.github.io/portfolio/Yout">YouTube</a>
-            </div>
-
+  </head>
+  <body class="bg-green-500">
+    <div class="container mx-auto my-5">
+      <h1 class="text-white text-5xl p-5 text-center font-bold">Portfolio</h1>
+      <div class="grid grid-cols-2 gap-5 md:grid-cols-3">
+        <div class="bg-red-400 p-2 rounded">
+          <img
+            src="https://ys-portfolio-ten.vercel.app/img/books.png"
+            class="rounded"
+            alt=""
+          />
+          <a
+            class="text-white text-xl hover:underline"
+            href="https://uvays-2.github.io/portfolio/books"
+            >BookList</a
+          >
         </div>
+
+        <div class="bg-red-400 p-2 rounded">
+          <img
+            src="https://ys-portfolio-ten.vercel.app/img/ismoil.png"
+            class="rounded"
+            alt=""
+          />
+          <a
+            class="text-white text-xl hover:underline"
+            href="https://uvays-2.github.io/bibliotek/bibliotek"
+            >ismoil.me</a
+          >
+        </div>
+
+        <div class="bg-red-400 p-2 rounded">
+          <img
+            src="https://ys-portfolio-ten.vercel.app/img/master.png"
+            class="rounded"
+            alt=""
+          />
+          <a
+            class="text-white text-xl hover:underline"
+            href="https://uvays-2.github.io/portfolio/ismoil"
+            >ismoil</a
+          >
+        </div>
+
+        <div class="bg-red-400 p-2 rounded">
+          <img
+            src="https://ys-portfolio-ten.vercel.app/img/lesson3.png"
+            class="rounded"
+            alt=""
+          />
+          <a
+            class="text-white text-xl hover:underline"
+            href="https://uvays-2.github.io/portfolio/lesson3"
+            >Lesson-3</a
+          >
+        </div>
+
+        <div class="bg-red-400 p-2 rounded">
+          <img
+            src="https://ys-portfolio-ten.vercel.app/img/youtube.png"
+            class="rounded"
+            alt=""
+          />
+          <a
+            class="text-white text-xl hover:underline"
+            href="https://uvays-2.github.io/portfolio/Yout"
+            >YouTube</a
+          >
+        </div>
+
+        <div class="bg-red-400 p-2 rounded">
+          <img
+            src="Снимок экрана 2024-04-01 183034.png"
+            class="rounded"
+            alt=""
+          />
+          <a
+            class="text-white text-xl hover:underline"
+            href="https://uvays-2.github.io/portfolio/cinema"
+            >NetFlix</a
+          >
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
